Fix logo getting cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -887,7 +887,7 @@ section {
 }
 
 #about .about-block img {
-  width: 100%;
+  height: 100%;
 }
 
 #about .about-block .about-content {
